[package]
name = "lamina"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynasmrt = "*"
nix = "*"

[dependencies.iced-x86]
version = "*"



# Measuring the reorder buffer with H. Wong's gadget
[[bin]]
name = "rob"
path = "bin/rob.rs"

# Measuring the physical register file with H. Wong's gadget
[[bin]]
name = "prf"
path = "bin/prf.rs"

# Measuring the store queue size with H. Wong's gadget
[[bin]]
name = "stq"
path = "bin/stq.rs"

# Measuring the load queue size with H. Wong's gadget
[[bin]]
name = "ldq"
path = "bin/ldq.rs"


#[[bin]]
#name = "simple"
#path = "bin/simple.rs"
