[package]
name = "lamina"
version = "0.1.0"
edition = "2018"

[dependencies]
dynasmrt = "*"
nix = "*"

[dependencies.iced-x86]
version = "*"

# Measuring the reorder buffer with H. Wong's gadget
[[bin]]
name = "rob"
path = "bin/rob.rs"

# Measuring the physical register file with H. Wong's gadget
[[bin]]
name = "prf"
path = "bin/prf.rs"

# Measuring the store queue size with H. Wong's gadget
[[bin]]
name = "stq"
path = "bin/stq.rs"

# Measuring the load queue size with H. Wong's gadget
[[bin]]
name = "ldq"
path = "bin/ldq.rs"

# Measuring a single speculative events with PMCs
[[bin]]
name = "spec_rdtsc_example"
path = "bin/pmc/spec_rdtsc_example.rs"

# Measuring up to six events with PMCs
[[bin]]
name = "rdpmc_example"
path = "bin/pmc/rdpmc_example.rs"


